compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__case_clause_guards__int_remainder_in_guard.snap
---
source: compiler-core/src/luau/tests/case_clause_guards.rs
expression: "pub fn main(x) {\n  case x {\n    n if n % 2 == 0 -> 0\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(x) {
  case x {
    n if n % 2 == 0 -> 0
    _ -> 1
  }
}


----- COMPILED LUAU
local _gleam = require("../gleam")

local function main(x)
  return (function()
    local _subject_0 = x
    if true then
    
      local n = _subject_0
      if _gleam.isEqual((_gleam.remainderInt(n, 2)), 0) then
      return 0
      end
    end
    if true then
    
      return 1
    end
    end
  end)()
end

return {
  main = main
}
